<resources>
    <string name="app_name">TestComponents</string>
    <string name="app_title">GridTest</string>
    <string name="todo">TODO</string>

    <string name="provider">Provider</string>"
    <string name="size">Size</string>
    <string name="languages">Languages</string>
    <string name="category">Category</string>
    <string name="compatibility">Compatibility</string>
    <string name="copyright">Copyright</string>
    <string name="description">Description</string>
    <string name="downloads">Downloads</string>
    <string name="select_payment_text">Select a payment mode</string>
    <string name="auto_renewal_text">No Auto Renewal. Top-up anytime</string>
    <string name="card_detail">Credit and Debit Cards</string>
    <string name="upi_detail">UPI / QR</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="date_and_time">Date and Time</string>
    <string name="payment_method">Payment method</string>

</resources>