<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/sub_payment_left_pane"
        android:layout_width="600dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/payment_screen_title"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/payment_back_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:src="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/payment_mode_text"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="60dp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/select_payment_text"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/payment_screen_subtitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="2dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/payment_tick_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/payment_subtitle_info"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="60dp"
                android:gravity="center_vertical"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:text="@string/auto_renewal_text"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/payment_screen_card_info"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_card"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_launcher_foreground"/>

            <TextView
                android:id="@+id/card_detail"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:text="@string/card_detail"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/payment_mastercard"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_marginStart="190dp"/>

            <ImageView
                android:id="@+id/payment_visa"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_marginStart="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/payment_screen_upi_info"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/upi_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_launcher_foreground"/>

            <TextView
                android:id="@+id/upi_qr_text"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:text="@string/upi_detail"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/payment_paytym"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_marginStart="190dp"/>

            <ImageView
                android:id="@+id/payment_phonepe"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_marginStart="20dp"/>
            <ImageView
                android:id="@+id/payment_gpay"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_marginStart="20dp"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="2dp"
        android:layout_height="450dp"
        android:layout_marginHorizontal="2dp"
        android:layout_gravity="center_vertical"/>

    <LinearLayout
        android:id="@+id/sub_payment_right_pane"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/payment_screen_app_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/payment_screen_app_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:text="DriveSmart Plus"/>

        </LinearLayout>

        <TextView
            android:id="@+id/app_rate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:text="Rd 499"/>

        <TextView
            android:id="@+id/payment_screen_app_charge"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:text="One - Time Charge"/>

        <TextView
            android:id="@+id/payment_screen_app_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:text="Unblock the full potential of your cars infotainment system"/>

    </LinearLayout>

</LinearLayout>